--- a/views/layout/admin-layout.ejs
+++ b/views/layout/admin-layout.ejs
@@ -78,7 +78,7 @@
           <a class="nav-link d-flex align-items-center justify-content-between collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#settings-collapse" aria-expanded="false" >
             <div>
               <i class="bi bi-gear px-1"  style="font-size: 18px;"></i> 
-              Site Settings
+              Settings
             </div>
             <i class="bi bi-chevron-down px-1"  style="font-size: 18px;"></i>
           </a>
@@ -86,6 +86,7 @@
             <ul class="btn-toggle-nav fw-normal pb-1">
               <li><a href="/admin/settings/banner" class="link-white text-decoration-none rounded text-white">Banner</a></li>
               <li><a href="/admin/settings/admins" class="link-white text-decoration-none rounded text-white">Admins</a></li>
+              <li><a href="/admin/settings/" class="link-white text-decoration-none rounded text-white">Site Settings</a></li>
             </ul>
           </div>
         </li>
