--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,19 +5,19 @@
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Zay Shop</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light logo"><%= siteData.name%></h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
-                            123 Consectetur at ligula 10660
+                            <%= siteData.address%>
                         </li>
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel:010-020-0340">010-020-0340</a>
+                            <a class="text-decoration-none" href="tel:<%= siteData.phone%>"><%= siteData.phone%></a>
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
-                            <a class="text-decoration-none" href="mailto:info@company.com">info@company.com</a>
+                            <a class="text-decoration-none" href="mailto:<%= siteData.email%>"><%= siteData.email%></a>
                         </li>
                     </ul>
                 </div>
@@ -51,18 +51,31 @@
                 </div>
                 <div class="col-auto me-auto">
                     <ul class="list-inline text-left footer-icons">
+                        <% if(siteData.social.facebook.state){ %> 
                         <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="http://facebook.com/"><i class="fab fa-facebook-f fa-lg fa-fw"></i></a>
+                            <a class="text-light text-decoration-none" target="_blank" href="<%= siteData.social.facebook.url%>"><i class="fab fa-facebook-f fa-lg fa-fw"></i></a>
                         </li>
+                        <%} %>
+                        <% if(siteData.social.instagram.state){ %> 
                         <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg fa-fw"></i></a>
+                            <a class="text-light text-decoration-none" target="_blank" href="<%= siteData.social.instagram.url%>"><i class="fab fa-instagram fa-lg fa-fw"></i></a>
                         </li>
+                        <%} %>
+                        <% if(siteData.social.twitter.state){ %> 
                         <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="https://twitter.com/"><i class="fab fa-twitter fa-lg fa-fw"></i></a>
+                            <a class="text-light text-decoration-none" target="_blank" href="<%= siteData.social.twitter.url%>"><i class="fab fa-twitter fa-lg fa-fw"></i></a>
                         </li>
+                        <%} %>
+                        <% if(siteData.social.linkedin.state){ %> 
                         <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
+                            <a class="text-light text-decoration-none" target="_blank" href="<%= siteData.social.linkedin.url%>"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
                         </li>
+                        <%} %>
+                        <% if(siteData.social.whatsapp.state){ %> 
+                        <li class="list-inline-item border border-light rounded-circle text-center">
+                            <a class="text-light text-decoration-none" target="_blank" href="https://wa.me/<%= siteData.social.whatsapp.number%>"><i class="fab fa-whatsapp fa-lg fa-fw"></i></a>
+                        </li>
+                        <%} %>
                     </ul>
                 </div>
                 <div class="col-auto">
