--- a/views/auth/forgot.ejs
+++ b/views/auth/forgot.ejs
@@ -18,7 +18,7 @@
 
 
 <!-- Forget section start -->
-<section class="h-100vh bg-light ">
+<section class="h-100vh bg-light bgimage2">
     <div class="container h-100">
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
@@ -27,7 +27,7 @@
                         Addev Store
                     </h1>
                 </div>
-                <div class="card shadow-lg">
+                <div class="card shadow-lg bg-dark text-white">
                     <div class="card-body p-5">
                         <h1 class="fs-4 card-title fw-bold mb-4">Forgot Password</h1>
                         <div id="formMessages"></div>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="card-footer py-3 border-0">
                         <div class="text-center">
-                            Remember your password? <a href="/auth/login" class="text-dark">Login</a>
+                            Remember your password? <a href="/auth/login" >Login</a>
                         </div>
                     </div>
                 </div>
