--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -19,7 +19,7 @@
 
 
 <!-- Login content -->
-<section class="h-100 bg-light" style="min-height:100vh ;">
+<section class="h-100 bg-light bgimage2" style="min-height:100vh ;">
     <div class="container h-100">
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
@@ -28,7 +28,7 @@
                         Addev Login
                     </h1>
                 </div>
-                <div class="card shadow-lg">
+                <div class="card shadow-lg bg-dark text-white" style="--bs-bg-opacity: .5;">
                     <div class="card-body p-5">
                         <div  id="response"></div>
 
@@ -65,7 +65,7 @@
                     </div>
                     <div class="card-footer py-3 border-0">
                         <div class="text-center">
-                            Don't have an account? <a href="/auth/register" class="text-dark">Create One</a>
+                            Don't have an account? <a href="/auth/register" >Create One</a>
                         </div>
                     </div>
                 </div>
