--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -19,7 +19,7 @@
 
 
 <!-- Signup section start -->
-<section class="h-100 bg-light" style="min-height: 100vh;" >
+<section class="h-100 bg-light bgimage2" style="min-height: 100vh;" >
     <div class="container h-100">
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
@@ -28,7 +28,7 @@
                         Addev Signup
                     </h1>
                 </div>
-                <div class="card shadow-lg">
+                <div class="card shadow-lg bg-dark text-white">
                     <div class="card-body p-5">
                         <div  id="response"></div>
                         <h1 class="fs-4 card-title fw-bold mb-4">Register</h1>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card-footer py-3 border-0">
                         <div class="text-center">
-                            Already have an account? <a href="login" class="text-dark">Login</a>
+                            Already have an account? <a href="login" >Login</a>
                         </div>
                     </div>
                 </div>
