--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -19,7 +19,7 @@
 
 
 <!-- Forget section start -->
-<section class="h-100vh bg-light">
+<section class="h-100vh bg-light bgimage2">
     <div class="container h-100">
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
@@ -28,7 +28,7 @@
                         Addev Login
                     </h1>
                 </div>
-                <div class="card shadow-lg">
+                <div class="card shadow-lg bg-dark text-white">
                     <div class="card-body p-5">
                         <h1 class="fs-4 card-title fw-bold mb-4">Reset Password</h1>
                         <% if(validated){ %> 
