--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
         </div>
     </div>
   <!-- Start Top Nav -->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-light d-none d-lg-block" id="templatemo_nav_top">
+  <nav class="navbar navbar-expand-lg bg-black navbar-light d-none d-lg-block" id="templatemo_nav_top" style="font-size: 18px;">
     <div class="container text-light">
         <div class="w-100 d-flex justify-content-between">
             <div>
@@ -51,7 +51,7 @@
 <nav class="navbar navbar-expand-lg navbar-light shadow">
     <div class="container d-flex justify-content-between align-items-center">
 
-        <a class="navbar-brand text-success logo h1 align-self-center" href="/">
+        <a class="navbar-brand text-dark logo h1 align-self-center px-2 m-0" style="font-size: 38px !important;" href="/" >
             <%= siteData.name%>
         </a>
 
@@ -162,11 +162,11 @@
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
-            <div id="cartOffCanvaData" class="my-2"></div>
+            <div id="cartOffCanvaData" class="my-2"><p class="text-danger">Add Products</p></div>
             <div id="cartLoader"></div>
             <hr>
             <div class="border-bottom d-flex justify-content-between">
-                <p class="text-secondary" id="cartItemCount">2 Items</p>
+                <p class="text-secondary" id="cartItemCount">0 Item</p>
                 <div>
                     <p class="text-secondary">Sub total: <h5 class="text-primary d-inline m-0 p-0" id="cartItemTotal">1500</h5></p>
                 </div>
