--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -168,7 +168,7 @@
             <div class="border-bottom d-flex justify-content-between">
                 <p class="text-secondary" id="cartItemCount">0 Item</p>
                 <div>
-                    <p class="text-secondary">Sub total: <h5 class="text-primary d-inline m-0 p-0" id="cartItemTotal">1500</h5></p>
+                    <p class="text-secondary">Sub total: <h5 class="text-primary d-inline m-0 p-0" id="cartItemTotal">&#8377;0</h5></p>
                 </div>
             </div>
           <a href="/dash/cart/" class="btn btn-lg btn-dark w-100 m-1 rounded-0 fs-5" >Checkout</a>
