--- a/views/user/dash/cart.ejs
+++ b/views/user/dash/cart.ejs
@@ -73,7 +73,7 @@
                             <div class="border rounded p-2">
                                 <div class="d-flex justify-content-between border-bottom">
                                     <p class="m-0 p-1">Cart items</p>
-                                    <p class="m-0 p-1" id="cartItemCount2">0 </p>
+                                    <p class="m-0 p-1" id="cartItemCount2">Loading..</p>
                                 </div>
                                 <div class="d-flex justify-content-between border-bottom">
                                     <p class="m-0 p-1">Sub Total</p>
