--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -20,7 +20,7 @@
                         <% }) %> 
                     </ul>
                 </li>
-                <li class="pb-3">
+                <!-- <li class="pb-3">
                     <a class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
                         Sorting
                         <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
@@ -42,7 +42,7 @@
                         <li><a class="text-decoration-none" href="#">Sweather</a></li>
                         <li><a class="text-decoration-none" href="#">Sunglass</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
 
@@ -66,7 +66,7 @@
                         </li>
                     </ul>
                 </div> -->
-                <div class="col-md-6 pb-4 ms-auto">
+                <!-- <div class="col-md-6 pb-4 ms-auto">
                     <div class="d-flex">
                         <select class="form-control" name="sortid" id="sortingInp" onchange="console.log(this)">
                             <option disabled selected>Sort by</option>
@@ -76,7 +76,7 @@
                             <option value="psl">Srot by price (s-l)</option>
                         </select>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <% if(productsList.length ==0){ %> 
