admin user soft deletion

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -124,7 +124,7 @@ new Chart("myChart2", {
   options: {
     title: {
       display: true,
-      text: "World Wide Wine Production 2018"
+      text: "Total Order's Report"
     }
   }
 });
