--- a/views/layout/admin-layout.ejs
+++ b/views/layout/admin-layout.ejs
@@ -100,7 +100,7 @@
           <strong class="text-capitalize"><%= userData.username %></strong>
         </a>
         <ul class="dropdown-menu dropdown-menu-dark text-small shadow" style="">
-          <li><a class="dropdown-item" href="#">Settings</a></li>
+          <li><a class="dropdown-item" href="/admin/settings/">Settings</a></li>
           <li><a class="dropdown-item" href="/admin/settings/profile">Profile</a></li>
           <li>
             <hr class="dropdown-divider">
