--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -162,7 +162,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
-            <div id="cartOffCanvaData" class="my-2"><p class="text-danger">Add Products</p></div>
+            <div id="cartOffCanvaData" class="my-2"></div>
             <div id="cartLoader"></div>
             <hr>
             <div class="border-bottom d-flex justify-content-between">
