--- a/views/admin/report-ask.ejs
+++ b/views/admin/report-ask.ejs
@@ -16,9 +16,9 @@
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1"><i class="bi bi-clipboard-data"></i></span>
                         <select name="" id="report"  class="form-control" onchange="changeAction()">
-                            <option disabled selected>Select</option>
-                            <option value="sales" >Sales</option>
-                            <option value="return" >Return</option>
+                            <option disabled >Select</option>
+                            <option value="sales" selected>Sales</option>
+                            <option value="return" disabled>Return</option>
                         </select>
                         
                     </div>
