--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -12,14 +12,13 @@
                 <div class="form-group my-1">
                     <label for="user">Email/Username </label>
                     <input type="text" class="form-control" id="user" aria-describedby="emailHelp"
-                        name="user" value="adil.akp1@gmail.com" placeholder="Enter you email or username" autofocus>
+                        name="user" placeholder="Enter you email or username" autofocus>
                     <small id="emailHelp" class="form-text text-muted d-none">We'll never share your email with anyone
                         else.</small>
                 </div>
                 <div class="form-group my-1">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Password"
-                        value="dxpz7QiY">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="passcheck1">
