--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -36,7 +36,7 @@
                         <form method="POST" class="needs-validation" novalidate="" autocomplete="off" action="/api/loginvalidate">
                             <div class="mb-3">
                                 <label class="mb-2 text-muted" for="user">Email/Username</label>
-                                <input id="user" type="text" class="form-control" name="user" value="adil.akp1@gmail.com"  required autofocus>
+                                <input id="user" type="text" class="form-control" name="user" required autofocus>
                                 <div class="invalid-feedback">
                                     Email/username is invalid
                                 </div>
@@ -49,7 +49,7 @@
                                         Forgot Password?
                                     </a>
                                 </div>
-                                <input id="password" type="password" class="form-control" name="password" value="passwordnew" required>
+                                <input id="password" type="password" class="form-control" name="password" required>
                                 <div class="invalid-feedback">
                                     Password is required
                                 </div>
