--- a/views/user/dash/orderView.ejs
+++ b/views/user/dash/orderView.ejs
@@ -33,13 +33,13 @@
                 <!-- col end -->
                 <div class="col-lg-9 ">
                     <div class="card mb-3">
-                        <div class="card-body bg-primary border-0">
+                        <div class="card-body bg-dark border-0">
                             <div class="border-0 p-2">
                                 <h5 class="text-secondary border-bottom py-2 mb-2 text-white">Order Status </h5>
                                 <div class="adProgress-bar">
                                     <div class="d-flex align-items-center">
                                         <div class="col-2 col-md-1 ad-line-s-half py-4">
-                                            <i class="bi <% if(orderData.delivery_status.ordered.state) {%>   bi-check-square<% }else{ %>bi-square <% } %>  h3 text-white bg-primary "></i>
+                                            <i class="bi <% if(orderData.delivery_status.ordered.state) {%>   bi-check-square<% }else{ %>bi-square <% } %>  h3 text-white bg-dark "></i>
                                         </div>
                                         <div class="col ">
                                             <p class="mt-1 h3  text-white <% if(orderData.delivery_status.ordered.state==true && orderData.delivery_status.shipped.state==false) {%>   fw-bold<% } %>">Order Placed</p>
@@ -48,7 +48,7 @@
                                     </div>
                                     <div class="d-flex align-items-center">
                                         <div class="col-2 col-md-1 ad-line-e-half ad-line-s-half py-4">
-                                            <i class="bi <% if(orderData.delivery_status.shipped.state) {%>   bi-check-square<% }else{ %>bi-square <% } %> h3 text-white bg-primary "></i>
+                                            <i class="bi <% if(orderData.delivery_status.shipped.state) {%>   bi-check-square<% }else{ %>bi-square <% } %> h3 text-white bg-dark "></i>
                                         </div>
                                         <div class="col">
                                             <p class="mt-1 h3 text-white <% if(orderData.delivery_status.shipped.state==true && orderData.delivery_status.out_for_delivery.state==false) {%>   fw-bold<% } %>" >Shipped</p>
@@ -59,7 +59,7 @@
                                     </div>
                                     <div class="d-flex align-items-center">
                                         <div class="col-2 col-md-1 ad-line-e-half ad-line-s-half py-4">
-                                            <i class="bi <% if(orderData.delivery_status.out_for_delivery.state) {%>   bi-check-square<% }else{ %>bi-square <% } %> h3 text-white bg-primary "></i>
+                                            <i class="bi <% if(orderData.delivery_status.out_for_delivery.state) {%>   bi-check-square<% }else{ %>bi-square <% } %> h3 text-white bg-dark "></i>
                                         </div>
                                         <div class="col">
                                             <p class="mt-1 h3 text-white  <% if(orderData.delivery_status.out_for_delivery.state==true && orderData.delivery_status.delivered.state==false) {%>   fw-bold<% } %>">Out for delivery</p>
@@ -70,7 +70,7 @@
                                     </div>
                                     <div class="d-flex align-items-center">
                                         <div class="col-2 col-md-1 ad-line-e-half py-4">
-                                            <i class="bi <% if(orderData.delivery_status.delivered.state) {%>   bi-check-square<% }else{ %>bi-square <% } %> h3 text-white bg-primary "></i>
+                                            <i class="bi <% if(orderData.delivery_status.delivered.state) {%>   bi-check-square<% }else{ %>bi-square <% } %> h3 text-white bg-dark "></i>
                                         </div>
                                         <div class="col">
                                             <p class="mt-1 h3 text-white <% if(orderData.delivery_status.delivered.state==true ) {%>   fw-bold<% } %>">Delivered</p>
