--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -459,7 +459,7 @@
 <!-- End Content -->
 
 <!-- Start Brands -->
-<section class="bg-light py-5">
+<section class="bg-light py-5 d-none">
     <div class="container my-4">
         <div class="row text-center py-3">
             <div class="col-lg-6 m-auto">
