--- a/views/layout/user-layout.ejs
+++ b/views/layout/user-layout.ejs
@@ -37,7 +37,7 @@
 
     <!-- Start Script -->
     <script src="/assets/js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="/assets/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/assets/js/templatemo.js"></script>
     <script src="/assets/js/slick.min.js"></script>
